<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/gig_main_container">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/gig_name"
            android:autofillHints=""
            android:hint="@string/name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

    <TextView
            android:text="@string/placeholder_gig_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/gig_date"
            app:layout_constraintTop_toBottomOf="@+id/gig_name"
            android:layout_marginTop="2dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:id="@+id/delete_gig_fab"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:backgroundTint="@color/colorRed"
            app:tint="@color/colorWhite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_save" android:id="@+id/save_gig_fab"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginEnd="16dp"
            android:text="@string/action_save"
            app:backgroundTint="@color/colorBlue"
            app:tint="@color/colorWhite"/>
</androidx.constraintlayout.widget.ConstraintLayout>